--- a/Congresspec/Congress/.classpath
+++ b/Congresspec/Congress/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Joy/Desktop/swingx.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Joy/Desktop/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/swingx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
